# scrapy_project

./: .gitignore  README.md  pyproject.toml
filmscraper/filmscraper/: items.py  middlewares.py  pipelines.py  settings.py
filmscraper/filmscraper/spiders/: filmspider.py
