[tool.poetry]
name = "scrapy-project"
version = "0.1.0"
description = ""
authors = ["David Tacite <david.tacite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
